# eos

./: .gitignore  .gitmodules  CMakeLists.txt
includes/: agent.h  constants.h  game.h  hmm.h
src/: agent.cpp  game.cpp  helper.cpp  hmm.cpp  main.cpp
